--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
     <p>These are publicly available webcams from around the world.</p>
     <div class="camera-container" id="camera-container"></div>
     <script>
-        let activeCamera = null;
-        
         fetch('cameras.json')
             .then(response => response.json())
             .then(data => {
@@ -62,6 +60,7 @@
                     let camDiv = document.createElement('div');
                     camDiv.classList.add('camera');
                     camDiv.dataset.url = cam.url;
+                    camDiv.dataset.description = cam.description;
                     camDiv.innerHTML = `<h3>${cam.description}</h3>`;
                     camDiv.onclick = function () {
                         if (activeCamera && activeCamera !== this) {
@@ -70,7 +69,7 @@
                         }
                         if (activeCamera !== this) {
                             this.classList.add('expanded');
-                            this.innerHTML = `<iframe src="${this.dataset.url}" allowfullscreen></iframe>`;
+                            this.innerHTML = `<h3>${this.dataset.description}</h3><iframe src="${this.dataset.url}" allowfullscreen></iframe>`;
                             activeCamera = this;
                         } else {
                             activeCamera = null;
@@ -78,7 +77,8 @@
                     };
                     container.appendChild(camDiv);
                 });
-            });
+            })
+            .catch(error => console.error("Error loading cameras:", error));
     </script>
 </body>
 </html>
