--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@
             font-size: 14px;
             margin: 0;
         }
-        .camera iframe {
-            display: none;
-            width: 100%;
-            height: 100%;
-        }
-        .camera.expanded iframe {
+        .camera img {
+            max-width: 100%;
+            max-height: 100%;
             display: block;
         }
     </style>
@@ -66,19 +63,21 @@
                     camDiv.classList.add('camera');
                     camDiv.dataset.url = cam.url;
                     camDiv.dataset.description = cam.description;
-                    camDiv.innerHTML = `<h3>${cam.description}</h3>`;
+
+                    // Use wsrv.nl to proxy the image over HTTPS
+                    let proxyUrl = `https://wsrv.nl/?url=${encodeURIComponent(cam.url)}`;
+
+                    camDiv.innerHTML = `<h3>${cam.description}</h3><img src="${proxyUrl}" alt="${cam.description}">`;
+                    
                     camDiv.onclick = function () {
                         if (activeCamera && activeCamera !== this) {
                             activeCamera.classList.remove('expanded');
-                            activeCamera.innerHTML = `<h3>${activeCamera.dataset.description}</h3>`;
                         }
                         if (activeCamera !== this) {
                             this.classList.add('expanded');
-                            this.innerHTML = `<h3>${this.dataset.description}</h3><iframe src="${this.dataset.url}" allowfullscreen></iframe>`;
                             activeCamera = this;
                         } else {
                             this.classList.remove('expanded');
-                            this.innerHTML = `<h3>${this.dataset.description}</h3>`;
                             activeCamera = null;
                         }
                     };
@@ -86,17 +85,6 @@
                 });
             })
             .catch(error => console.error("Error loading cameras:", error));
-
-        // Hack: Force load HTTP content
-        window.onload = function() {
-            const iframeElements = document.querySelectorAll('iframe');
-            iframeElements.forEach(iframe => {
-                if (iframe.src.startsWith('http://')) {
-                    // Force the iframe to load content over HTTP by setting the src dynamically
-                    iframe.src = iframe.src.replace('http://', 'https://');
-                }
-            });
-        };
     </script>
 </body>
 </html>
